c4prj1_deck/grade.txt
Grading at Sun Mar  7 16:54:18 UTC 2021
Compiling deck.c -> deck.o
deck.c: In function ‘add_card_to’:
deck.c:11:3: error: expected ‘;’ before ‘deck’
   deck->cards[deck->n_cards] = ptrc;
   ^
Compilation of deck.c failed

Overall Grade: F
